--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,34 +1,34 @@
-
 body {
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, #333399 ,rgb(223, 154, 154), #e02e43);
-  display:flex;
-  align-items: center;
-  justify-content: center;
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, #333399, rgb(223, 154, 154), #e02e43);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.home{
-  background: rgba(234, 220, 220, .5);
-  padding: 4rem;
-  margin-top: 20px;
-  position: relative;
-  border-radius: 10px;
+.translucent {
+    padding: 4rem;
+    position: relative;
+    margin-top: 80px;
+    border-radius: 10px;
+    width: 500px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background-color: #ffffff73;
 }
-
 
 .home-logo {
-  display:flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .reg-login-btn {
-  display:flex;
-  align-items: center;
-  padding: 5px;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    justify-content: center;
 }
-
 
 .centered {
     padding-top: 200px;
@@ -36,8 +36,45 @@ body {
 }
 
 .secret-text {
-  text-align: center;
-  font-size: 2rem;
-  color: #fff;
-  background-color: #000;
+    text-align: center;
+    font-size: 2rem;
+    color: #fff;
+    background-color: #000;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 80%;
+    z-index: 1; /* Ensure it appears on top of other content */
+    display: inline-block;
+}
+
+.sidenav {
+    height: 100%;
+    width: 270px;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top:80px;
+    background-color: rgba(241, 241, 238);
+    border-radius: 0px 20px 20px 0px;
+    padding-top: 30px;
+}
+
+.sidenav i {
+    padding: 15px;
+    margin-left: 25px;
+    margin-right: 15px;
+}
+
+.sidenav ul a {
+    color: black;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    text-decoration: none;
+}
+
+.sidenav ul a i {
+    margin-right: 5px;
 }
