--- a/views/bmi.ejs
+++ b/views/bmi.ejs
@@ -1,132 +1,42 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-
-<head>
+<%- include('partials/header') %>
+<%- include('partials/sidenav') %>
     <meta charset="utf-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css">
-    <title>BMR</title>
-</head>
-
-<body style="background-position: center; background-repeat: no-repeat; background-size: cover;">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
 
 
-    <h1 align="center">BMI and BMR INFO</h1>
-    <hr>
+    <div class="translucent" style="display: flex; width:65%; left:100px; top:40px">
+        <div style="width:40%; margin:5%;">
+            <h3 style="display: block;">BMI</h3>
+            <hr>
+            <p class="lead">Body Mass Index (BMI) is a person's weight in kilograms divided by the square of height
+                in meters. A high BMI can indicate high body fatness.</p>
 
-    <div class="container my-5">
-        <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
-            <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
-                <h1 class="display-4 fw-bold lh-1">BMI</h1>
-                <p class="lead">Body Mass Index (BMI) is a person's weight in kilograms divided by the square of height
-                    in meters. A high BMI can indicate high body fatness.</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                </div>
-            </div>
-            <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                <div class="px-4 py-5 my-5 text-center">
-                    <h1 class="display-5 fw-bold">CALCULATE</h1>
-                    <div class="col-lg-6 mx-auto">
-
-                        <form action="/bmi" method="post" class="mb-3">
-                            <label for="weight" class="form-label">Enter your Weight </label>
-                            <input type="text" name="weight1" placeholder=" in kg">
-                            <br>
-                            <br>
-                            <label for="height" class="form-label">Enter your Height </label>
-                            <input type="text" name="height1" placeholder=" in cm">
-                            <br>
-                            <br>
-                            <button type="submit" name="submit" class="btn btn-primary">SUBMIT</button>
-                            <br>
-                            <br>
-                            <label for="result">Your BMI :</label>
-                            <output name="result">
-                                <%= bmi %>
-                            </output>
-                        </form>
-
-                    </div>
-                </div>
-            </div>
         </div>
+        <form action="/bmi" method="post" style="width:60%; padding:15px;margin-top:20px">
+
+            <div class="form-group">
+                <label for="height">Enter your Height (in cm)</label>
+                <input type="text" name="height" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <label for="weight">Enter your Weight (in kg)</label>
+                <input type="text" name="weight" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <label for="result" style="margin: 15px 0px 15px 25px;">Your BMI:</label>
+            <output name="result">
+                <%= bmi %>
+            </output>
+
+        </form>
     </div>
 
 
-    <div class="container my-5">
-        <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
-            <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
-                <h1 class="display-4 fw-bold lh-1">BMR</h1>
-                <p class="lead">Basal metabolic rate (BMR) is the total number of calories that your body needs to
-                    perform basic, life-sustaining functions while at rest.</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                </div>
-            </div>
-            <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                <div class="px-4 py-5 my-5 text-center">
-                    <h1 class="display-5 fw-bold">CALCULATE</h1>
-                    <div class="col-lg-6 mx-auto">
+    </body>
 
-                        <form action="/bmi" method="post" class="mb-3">
-                            <label for="age" class="form-label">Enter your Age</label>
-                            <input type="text" name="age"><br>
-
-                            Select your Gender: <br>
-                            <input type="radio" id="gender" value="male" checked name="sex">
-                            <label for="sex" class="form-label">Male </label>
-                            <input type="radio" id="gender" value="female" name="sex">
-                            <label for="sex" class="form-label">Female</label>
-                            <br>
-
-                            <label for="height" class="form-label">Enter your Height (in cm)</label>
-                            <input type="text" name="height"><br>
-                            <label for="weight" class="form-label">Enter your Weight (in kg)</label>
-                            <input type="text" name="weight"><br>
-                            <label for="activity" class="form-label">Enter your activity during the day : </label>
-
-                            <select class="form-select" aria-label="Default select example" name="activity">
-                                <option value="1.2" selected>Sedentary</option>
-                                <option value="1.375">Light exercise</option>
-                                <option value="1.465">Moderate exercise</option>
-                                <option value="1.55">Daily exercise</option>
-                                <option value="1.725">Very Active exercise</option>
-                                <option value="1.9">Extra Active exercise</option>
-                            </select>
-
-                            <label for="aim" class="form-label">Select you Aim : </label>
-
-                            <select class="form-select" aria-label="Default select example" name="aim">
-                                <option value="0" selected>Maintain weight</option>
-                                <option value="-500">Lose weight</option>
-                                <option value="500">Gain weight</option>
-
-                            </select><br>
-                            <button type="submit" class="btn btn-primary">SUBMIT</button>
-                            <br><br>
-                            <label for="result">Your Calorie Requirement:</label>
-                            <output name="result">
-                                <%= cal %> Cal
-                            </output>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-    <br><br><br><br><br><br>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+    </html>
