--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,14 @@
 <%- include('partials/header') %>
+    <%- include('partials/sidenav') %>
+        <title>My Account</title>
+        <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+            integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+            integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/styles.css">
 
-    <section class="vh-100" style="background-color: #f4f5f7;">
-        <div class="container-fluid py-5">
+        <div class="container-fluid py-5" style="margin-top: 100px; margin-left:50px">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-lg-6 mb-4 mb-lg-0">
                     <div class="card mb-3" style="border-radius: .5rem;">
@@ -26,8 +33,8 @@
                                             <h6>Name</h6>
                                             <p class="text-muted">
                                                 <%=currentUserObj.first+" "+currentUserObj.last%></p>
-                        </div>
-                        <div class=" col-6 mb-3">
+                                        </div>
+                                        <div class=" col-6 mb-3">
                                                     <h6>Email</h6>
                                                     <p class="text-muted">
                                                         <%=currentUserObj.username%>
@@ -58,24 +65,14 @@
                                             </p>
                                         </div>
 
-
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
             </div>
-            <div class="jumbotron text-center">
-                <a class="btn btn-light" href="/user/logout" role="button">Log Out</a>
-                <a class="btn btn-primary" href="/bmi" role="button">Calculate BMI</a>
-                <a class="btn btn-primary" href="/meal" role="button">Meal Counter</a>
-            </div>
-
         </div>
-    </section>
+        </body>
 
-
-    <%- include('partials/footer') %>
+        <%- include('partials/footer') %>
