--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,13 @@
 <%- include('partials/header') %>
-
+<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/styles.css">
   <body class="text-center">
     <div>
-      <div class="home">
+      <div class="translucent">
         <div class="home-logo">
           <img src="images/foodlogo.png" alt="" width="100" height="100" />
         </div>
@@ -16,6 +21,7 @@
         <hr />
         <div class="reg-login-btn">
           <a class="btn btn-light" href="/user/register" role="button" margin-inline: 1em 2em>Register</a>
+          <hr>
           <a class="btn btn-primary" href="/user/login" role="button">Login</a>
         </div>
       </div>
